@@ -1,3 +1,9 @@
+2006-11-30  Carlos Garnacho  <carlosg@gnome.org>
+
+	* main.c:
+	* callbacks.c (on_manage_groups_clicked) (on_groups_dialog_show_help):
+	show help correctly in the groups dialog. Fixes bug #378425.
+
 2006-11-14  Carlos Garnacho  <carlosg@gnome.org>
 
 	* user-settings.c (check_password): patch by Sebastien Bacher 
